RESOLVED FIXED304568
[Skia] Fix GrDirectContext management for GPU resources
https://bugs.webkit.org/show_bug.cgi?id=304568
Summary [Skia] Fix GrDirectContext management for GPU resources
Nikolas Zimmermann
Reported 2025-12-21 03:17:38 PST
Make sure to use the correct GrDirectContext for flushing / GPU command buffer submission for all SkSurface + SkImage objects.
Attachments
Nikolas Zimmermann
Comment 1 2025-12-21 03:21:21 PST
Nikolas Zimmermann
Comment 2 2025-12-21 15:49:00 PST
EWS
Comment 3 2025-12-23 07:51:01 PST
Committed 304898@main (8ba6cece9500): <https://commits.webkit.org/304898@main> Reviewed commits have been landed. Closing PR #55767 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.