Source/WebCore/platform/graphics/skia/GraphicsContextGLSkia.cpp
@@ -30,6 +30,7 @@
 #include "BitmapImage.h"
 #include "GLContext.h"
 #include "GraphicsContextGLImageExtractor.h"
+#include "NativeImage.h"
 #include "NotImplemented.h"
 #include "PixelBuffer.h"
 #include "PlatformDisplay.h"
@@ -48,7 +49,7 @@ GraphicsContextGLImageExtractor::~GraphicsContextGLImageExtractor() = default;
 
 bool GraphicsContextGLImageExtractor::extractImage(bool premultiplyAlpha, bool ignoreGammaAndColorProfile, bool ignoreNativeImageAlphaPremultiplication)
 {
-    PlatformImagePtr platformImage;
+    RefPtr<NativeImage> nativeImage;
     bool hasAlpha = !m_image->currentFrameKnownToBeOpaque();
     if ((ignoreGammaAndColorProfile || (hasAlpha && !premultiplyAlpha)) && m_image->data()) {
         auto image = BitmapImage::create(nullptr,  AlphaOption::NotPremultiplied, ignoreGammaAndColorProfile ? GammaAndColorProfileOption::Ignored : GammaAndColorProfileOption::Applied);
@@ -56,10 +57,14 @@ bool GraphicsContextGLImageExtractor::extractImage(bool premultiplyAlpha, bool i
         if (!image->frameCount())
             return false;
 
-        platformImage = image->currentNativeImage()->platformImage();
+        nativeImage = image->currentNativeImage();
     } else
-        platformImage = m_image->currentNativeImage()->platformImage();
+        nativeImage = m_image->currentNativeImage();
 
+    if (!nativeImage)
+        return false;
+
+    auto platformImage = nativeImage->platformImage();
     if (!platformImage)
         return false;
 
@@ -101,7 +106,7 @@ bool GraphicsContextGLImageExtractor::extractImage(bool premultiplyAlpha, bool i
         if (!PlatformDisplay::sharedDisplay().skiaGLContext()->makeContextCurrent())
             return false;
 
-        GrDirectContext* grContext = PlatformDisplay::sharedDisplay().skiaGrContext();
+        auto* grContext = nativeImage->grContext();
         if (!platformImage->readPixels(grContext, imageInfo, static_cast<uint8_t*>(data->writable_data()), bytesPerRow, 0, 0))
             return false;
 
